--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head> 
   <body>
-    <div class="container">
+    <div class="main-container container">
         <div class="row">
             <h1  class="text-center text-bold">World Guide</h1>
             <p class="text-primary text-center">"Know your World"</p>
@@ -28,9 +28,13 @@
                       id="country-inp"
                       placeholder="Enter a country name here..."
                     />
-                    <button type="button" id="search-btn">Search</button>
+
+                    <div id="loader"></div>
+
+                    <button type="button"  id="search-btn">Search</button>
                   </div>
                   <div id="result"></div>
+              
 
 
             </div>
@@ -40,7 +44,7 @@
                         <h5>Favourite Countries</h5>
                     </div>
                     <div class="card-body">
-
+                      <div id="favList"></div>
                     </div>
 
                 </div>
@@ -50,6 +54,7 @@
      
     </div>
     <!-- Script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="assets/js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
