--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Get your world closer to you .Know your world " />
     <meta name="author" content="Ouma Nyang" />
+
     <title>World Guide</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <!--Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
